# fed-perso-xai

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  tmp_make_recommender_eval_notebook.py
configs/: explainer_hyperparameters.yml  explainers.yml  job_launcher.yml  metrics.yml
notebooks/: explain_eval_aggregation_eda.ipynb  recommender_evaluation_eda.ipynb  svm_rank_vs_sklearn_linear_svc.ipynb
notebooks/.ipynb_checkpoints/: explain_eval_aggregation_eda-checkpoint.ipynb  recommender_evaluation_eda-checkpoint.ipynb  svm_rank_vs_sklearn_linear_svc-checkpoint.ipynb
scripts/: check_main_resources.sh  prepare_recommender_context.sbatch  prepare_recommender_context.sh  recommender_pipeline.sbatch  run_explain_eval_pipeline.sh  run_matrix_pipeline.sh  run_recommender_pipeline.sh  submit_matrix_pipeline.sh  submit_pipeline.sh
src/fed_perso_xai/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_causal_shap_explanations.py  test_config_validation.py  test_dataset_loading.py  test_dataset_loading_and_preprocessing.py  test_dataset_registry.py  test_explain_eval_orchestrator.py  test_federated_training.py  test_fl_simulation.py  test_integrated_gradients_explanations.py  test_job_launcher.py  test_lime_explanations.py  test_metrics.py  test_model_registry.py  test_partitioning.py  test_paths.py  test_prepare_data.py  test_secure_aggregation_integration.py  test_serialization.py  test_shap_explanations.py  test_stage_b_training.py  test_strategy_registry.py  test_target_resolution.py  test_training_and_comparison.py
(+105 files in other folders)
